Fix locale-dependent formatting by adding Locale.ROOT to %f specifiers and DecimalFormat